--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ p {text-align: center;}
 <body> 
 <h2> 싹에게는 꿈이 있었습니다. </h2>
 	<img src="deadsprout.png">
-	<p><a href="11index.html">다시 시작하기</a></p>
+	<p><a href="https://myapplelemon.github.io/week3_3/">다시 시작하기</a></p>
 
 </body>
 </html>
